@@ -1,5 +1,4 @@
 AUTOMAKE_OPTIONS = check-news
-ACLOCAL_AMFLAGS = -I m4
 
 bin_PROGRAMS = postf
 
@@ -13,6 +12,8 @@ EXTRA_DIST = $(m4_files) \
 	epm-header.in
 
 m4_files = m4/mni_REQUIRE_LIB.m4 \
-    m4/mni_REQUIRE_MNILIBS.m4 \
-    m4/smr_WITH_BUILD_PATH.m4
+	m4/mni_REQUIRE_MNILIBS.m4 \
+	m4/smr_WITH_BUILD_PATH.m4 \
+	m4/smr_REQUIRED_LIB.m4 \
+	m4/mni_REQUIRE_OPENINVENTOR.m4
 
