@@ -1,1 +1,2 @@
+Please see the file INSTALL for installation instructions.
 
