@@ -1,4 +1,5 @@
 New in 1.0.01
 -------------
+* Man page
 * Ported to Ygl/X11
 * autoconfiscated
